JT-7906 Put left rail jumpy ad on preschool profiles, clean up uneeded class, fix ad overlapping bottom section title

--- a/app/assets/stylesheets/school_profiles/_profile_section.scss
+++ b/app/assets/stylesheets/school_profiles/_profile_section.scss
@@ -1,5 +1,5 @@
 .profile-section {
-  .section-title, .academics-title {
+  .section-title {
     text-align: center;
     @include media-breakpoint-up(sm) {
       text-align: left;
